# Harbor

./: .gitignore  BEACON_SETUP.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  bunfig.toml  package.json  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml  personal-data-gate.yml  release.yml  test.yml
.vibehard/: spec.json
agent_env/: __init__.py  beacon_sync.py  beacon_watcher.py  cli.py  config.py  config.template.toml  environment.py  interview.py  mdtables.py  migrate.py  new_project.py  skill_tracker.py  skills_organize.py  sync_obsidian_index.py  tidy.py
agent_env/demo/: __init__.py  demo_agent_map.md
agent_env/demo/Obsidian/: compaction-workflow.md  data-layer-patterns.md  five-layer-environment.md  knowledge-base-protocol.md
agent_env/demo/data/: catalog.md
agent_env/demo/data/sample_db/: README.md
agent_env/demo/rooms/research/: room_rules.md
agent_env/demo/rooms/writing/: room_rules.md
agent_env/demo/workspace/example-project/: plan.md  research.md  scratchpad.md
docs/: BUZZ.md  ROADMAP_harbor-team.md  ROADMAP_reconcile-and-consistency.md  SPEC_hardening.md
integrations/: mcp-server.concurrency.test.ts  mcp-server.test.ts  mcp-server.ts  pi.test.ts  pi.ts
src/: approval.test.ts  approval.ts  audit.test.ts  audit.ts  bench.test.ts  bench.ts  budget.test.ts  budget.ts  buzz-pack.test.ts  buzz-pack.ts  channel-tools.test.ts  channel-tools.ts  cli.test.ts  cli.ts  compaction.test.ts  compaction.ts  concurrency.test.ts  concurrency.worker.ts  config-edit.test.ts  config-edit.ts  config.test.ts  config.ts  dashboard.test.ts  dashboard.ts  db.ts  depersonalization.test.ts  env.test.ts  env.ts  evict.test.ts  evict.ts  gate.test.ts  gate.ts  hypervisor.test.ts  index.ts  install.test.ts  install.ts  isolation-doctor.test.ts  isolation-doctor.ts  isolation.test.ts  isolation.ts  (+32 more)
tests/: __init__.py  conftest.py  golden_render.py  helpers.py  test_beacon_sync.py  test_beacon_watcher.py  test_cli.py  test_config.py  test_coverage_boost.py  test_demo.py  test_environment.py  test_integration.py  test_interview.py  test_mdtables.py  test_migrate.py  test_new_project.py  test_skill_tracker.py  test_skills_organize.py  test_sync_obsidian_index.py  test_tidy.py
tests/fixtures/: generic_agent_map.md  generic_config.toml  v0_agent_map.md
tests/golden/: .cursorrules  AGENTS.md  CLAUDE.md  README.md
tests/golden/Obsidian/: _index.md
tests/golden/data/: catalog.md
tests/golden/rooms/research/: skills_index.md
